--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,39 @@ body{
 .navbar{
   display: flex;
   align-items: center;
-  background-color: #646464;
   color: #fff;
   height: 94px;
+  position: relative;
+  border-bottom: 1px solid rgba(235, 235, 240, 0.2);
+}
+
+.header{
+  min-height: 100vh;
+}
+
+.header-image{
+  background-image: url('../img/header_img.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
+}
+
+.header-image::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(41, 45, 51, 0.6);
+  width: 100%;
+  height: 100%;
+  z-index: 0;
 }
 
 .header-logo{
   padding: 25px 50px;
+  border-right: 1px solid rgba(235, 235, 240, 0.2);
+  height: 100%;
 }
 
 .header-nav{
