--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,84 @@ body{
   line-height: 160%;
 }
 
+.section{
+  margin-top: 150px;
+  margin-bottom: 150px;
+}
+
+.section-title{
+  font-family: 'BebasNeueBook';
+  color: #292D33;
+  font-size: 60px;
+  line-height: 120%;
+}
+
+.steps{
+  display: flex;
+  list-style: none;
+  padding: 0;
+  gap: 30px;
+}
+
+.steps-item{
+  max-width: 330px;
+}
+
+.steps-num{
+  font-family: 'BebasNeueBook';
+  color: #5C8EE6;
+  font-size: 48px;
+  line-height: 120%;
+  display: flex;
+  align-items: center;
+}
+.steps-num::after{
+  content: "";
+  height: 1px;
+  background: #EBEBF0;
+  width: 100%;
+  margin-left: 30px;
+}
+
+.steps-title{
+  margin-top: 30px;
+  margin-bottom: 10px;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 160%;
+  color: #292D33;
+}
+
+.steps-text{
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 160%;
+  color: #828A99;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.steps-link{
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 160%;
+  color: #5C8EE6;
+}
+.steps-link::before{
+  content: '';
+  height: 1px;
+  background: #5C8EE6;
+  width: 40px;
+}
+
+
+
+
+
+
 
 
 
