--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,17 @@ body{
   align-items: center;
   color: #fff;
   height: 94px;
-  position: relative;
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+  z-index: 2;
   border-bottom: 1px solid rgba(235, 235, 240, 0.2);
 }
 
 .header{
   min-height: 100vh;
+  padding-top: 94px;
 }
 
 .header-image{
