--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,15 @@ body{
   top: 0;
   z-index: 2;
   border-bottom: 1px solid rgba(235, 235, 240, 0.2);
+  transition: background-color 0.2s;
+}
+
+.navbar-light{
+  background-color: #fff;
+  color: #292D33;
+}
+.navbar-light .header-logo-pass{
+  fill: #292D33;
 }
 
 .header{
